--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,10 +179,157 @@ img {
 
 .footer-container {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     background: #1B1E23;
     padding: 1.5rem 5rem;
     font-size: 20px;
     position: relative;
+    width: 100%;
 }
+
+.footer-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    background: #1B1E23;
+    align-items: center;
+    width: auto;
+}
+
+.footer-logo {
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
+}
+
+.footer-logo img {
+    max-width: 30px;
+    padding-right: 0.2rem;
+}
+
+.footer-logo a {
+    color: #FEFEFE;
+    font-size: 22px;
+    font-weight: 700;
+}
+
+.footer-menu {
+    white-space: nowrap;
+}
+.footer-menu ul {
+    display: flex;
+    flex-direction: row; 
+    list-style: none;
+    padding: 0;
+    gap: 2rem;
+}
+
+.footer-menu > ul > li > a{
+    color: #6C7275;
+    font-weight: 700;
+}
+
+.footer-menu ul li ul {
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
+}
+
+.footer-menu a {
+    color: #FEFEFE;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.copyright {
+    color: #FEFEFE;
+    font-size: 14px;
+    margin-top: 1rem;
+    white-space: nowrap;
+}
+
+/* Footer Part CSS End */
+
+/* ///////////////////////////////////////////////////////////// */
+
+/* Index Part CSS Start */
+
+/* Hero Section Styles */
+#hero-section {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Full viewport height */
+    overflow: hidden; /* Ensure the texture doesn't overflow */
+}
+
+.hero-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1B1E23;
+}
+
+.hero-texture {
+    position: absolute;
+    top: 0;
+    left: 0;
+    justify-content: center;
+    z-index: 1; /* Place the texture behind the container */
+}
+
+.hero-texture img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensure the texture covers the entire area */
+}
+
+.hero-container {
+    position: relative;
+    z-index: 2; /* Place the container above the texture */
+    text-align: center; /* Center the content horizontally */
+    max-width: 800px; /* Adjust as needed */
+    padding: 20px;
+}
+
+.hero-content h1 {
+    font-size: 3rem; /* Adjust as needed */
+    margin-bottom: 1rem;
+}
+
+.hero-content p {
+    font-size: 1.2rem; /* Adjust as needed */
+    margin-bottom: 2rem;
+}
+
+.hero-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 1rem; /* Space between buttons */
+}
+
+.hero-buttons .btn {
+    padding: 0.75rem 1.5rem; /* Adjust as needed */
+    font-size: 1rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* Index Part CSS End */
+
+/* ///////////////////////////////////////////////////////////// */
