--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -102,10 +102,6 @@
     font-weight: 700;
   }
 
-  .sign-in-btn,
-  .sign-up-btn {
-      padding: 13px 31px;
-  }
 
   /* Header Part CSS End */
 
@@ -136,11 +132,6 @@
   .navigation-container {
     font-size: 17px;
     padding: 1rem 1rem;
-  }
-
-  .sign-in-btn,
-  .sign-up-btn {
-      padding: 12px 30px;
   }
 
   /* Header Part CSS End */
@@ -196,6 +187,19 @@
   .hero-content p {
     font-size: 16px;
   }
+
+  .features-header h2 {
+    font-size: 30px;
+  }
+  .features-container {
+    grid-template-columns: repeat(1, minmax(0, 1fr)); /* Stack cards in a single column */
+  }
+
+  .features-card {
+    height: auto; /* Allow cards to grow based on content */
+    min-height: 20rem;
+  }
+
 }
 
 @media (max-width: 768px){
@@ -207,19 +211,17 @@
   }
 
   .header-logo a {
-      color: #FEFEFE;
-      font-size: 18px;
-      font-weight: 700;
-  }
-
-  .sign-in-btn,
-  .sign-up-btn {
-      padding: 11px 29px;
+    color: #FEFEFE;
+    font-size: 18px;
+    font-weight: 700;
   }
 
   /* Header Part CSS End */
 
   /* ///////////////////////////////////////////////////////////// */
+
+
+
 }
 
 
@@ -235,11 +237,6 @@
     font-size: 16px;
   }
 
-  .sign-in-btn,
-  .sign-up-btn {
-    padding: 8px 16px;
-    font-size: 12px;
-  }
 
   .dropdown-button {
     padding-right: 0.4rem;
@@ -253,6 +250,30 @@
 
   .hero-content h1 {
     font-size: 30px;
+  }
+
+  .hero-upload-container {
+    border: .15rem solid #21252D; 
+    padding: 0.6rem; 
+    border-radius: 40px; 
+  }
+
+  .hero-upload-content {
+    border-radius: 40px; 
+    padding: 1.125rem 0.6rem; 
+  }
+
+  .upload-button {
+    padding: 0.675rem 1.5rem; 
+    font-size: 0.875rem; 
+    border: 1.5px solid #FEFEFE; 
+    border-radius: 40px; 
+    font-size: 14px; 
+    margin-left: 6rem; 
+  }
+
+  .upload-text {
+    font-size: 0.875rem;
   }
 
 }
@@ -269,20 +290,44 @@
       font-size: 14px;
   }
 
-  .sign-in-btn,
-  .sign-up-btn {
-      padding: 6px 12px;
-      font-size: 10px;
-  }
-
   /* Header Part CSS End */
 
   /* ///////////////////////////////////////////////////////////// */
+
+  
+  .hero-upload-container {
+    border: 0.1125rem solid #21252D; 
+    padding: 0.45rem; 
+    border-radius: 30px; 
+  }
+  
+  .hero-upload-content {
+    border-radius: 30px; 
+    padding: 0.84375rem 0.45rem; 
+  }
+  
+  .upload-button {
+    padding: 0.50625rem 1.125rem; 
+    font-size: 0.65625rem; 
+    border: 1.125px solid #FEFEFE; 
+    border-radius: 30px; 
+    font-size: 10.5px; 
+    margin-left: 4.5rem; 
+  }
+  
+  .upload-text {
+    font-size: 0.65625rem;
+  }
+  
+
 }
 
-@media (max-width: 300px){
+@media (max-width: 380px){
 
   /* Header Part CSS Start */
+  .hero-content h1 {
+    font-size: 24px;
+  }
 
   .header-logo img {
     max-width: 25px;
@@ -296,14 +341,11 @@
       padding: 0.5rem 0rem;
   }
 
-  .sign-in-btn,
-  .sign-up-btn {
-      padding: 4px 8px;
-      font-size: 8px;
-  }
 
   /* Header Part CSS End */
 
   /* ///////////////////////////////////////////////////////////// */
+
+
 
 }
