--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,10 @@ a {
     text-decoration: none;
     cursor: pointer;
 }
+
+p, h3 {
+    margin: 0;
+}
   
 img {
     max-width: 100%;
@@ -125,7 +129,7 @@ img {
 .sign-up-btn {
     background: linear-gradient(180deg, #6C99F4 0%, #3F6FD1 100%);
 }
-/* Dropdown button styles */
+
 .dropdown-button {
     display: none;
 }
@@ -150,28 +154,28 @@ img {
     cursor: pointer;
 }
 
-.line-splitter {
+.nav-line-splitter {
     width: 100%;
     height: 0.1rem;
     background: #FEFEFE;
-    margin: 0rem;
+    margin: 0.2rem;
 
 }
 
 /* Only show these elements when menu is active */
 .nav-menu:not(.show) .dropdown-logo img,
 .nav-menu:not(.show) .dropdown-close-button button,
-.nav-menu:not(.show) .line-splitter {
+.nav-menu:not(.show) .nav-line-splitter {
     display: none;
 }
 
 /* Show elements when menu is open OR during close animation */
 .nav-menu.show .dropdown-logo img,
 .nav-menu.show .dropdown-close-button button,
-.nav-menu.show .line-splitter,
+.nav-menu.show .nav-line-splitter,
 .nav-menu.hide .dropdown-logo img,
 .nav-menu.hide .dropdown-close-button button,
-.nav-menu.hide .line-splitter {
+.nav-menu.hide .nav-line-splitter {
     display: block;
 }
 
@@ -200,7 +204,7 @@ img {
     gap: 1rem;
     background: #1B1E23;
     align-items: center;
-    width: auto;
+
 }
 
 .footer-logo {
@@ -261,6 +265,8 @@ img {
 
 /* Index Part CSS Start */
 
+
+/* --------- Hero Section --------- */
 #hero-section {
     position: relative;
     display: flex;
@@ -269,11 +275,12 @@ img {
     height: 100vh; /* Full viewport height */
     overflow: hidden; /* Ensure the texture doesn't overflow */
     background-color: #1B1E23;
+    padding: 4rem 0;
 }
   
 .hero-wrapper {
     position: relative;
-    width: 100%;
+    width: 80%;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -297,7 +304,6 @@ img {
 
 }
   
-
   
 .hero-container {
     display: flex;
@@ -363,16 +369,21 @@ img {
 }
 
 
+/* --------- Features Section --------- */
 
-
-#features-section {
+#first-features-section {
     min-height: 100vh; 
     overflow: hidden;
     background-color: #1B1E23;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: auto;
+    padding: 4rem 0;
 }
 
 .features-wrapper {
-    width: 100%;
+    width: 90%;
     padding: 4rem;
     display: flex;
     align-items: center;
@@ -384,6 +395,7 @@ img {
 .features-header {
     text-align: center;
     color: #FEFEFE;
+    margin-top: 4rem;
 }
 
 .features-header-underline {
@@ -415,6 +427,7 @@ img {
 
 .features-card {
     background-color: #1E2229;
+    filter: drop-shadow(0 0 0.6rem #101214);
     width: 100%;
     height: 100%;
     position: relative;
@@ -448,6 +461,7 @@ img {
     font-size: 3rem;
     font-weight: bold;
     color: #FEFEFE;
+    padding: 0.5rem;
 }
 
 .features-card-content h3 {
@@ -464,7 +478,782 @@ img {
     margin: 0;
 }
 
+#second-features-section {
+    min-height: 100vh; 
+    overflow: hidden;
+    background-color: #1B1E23;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 4rem 0;
+}
+
+
+/* --------- Package Section --------- */
+
+#pricing-section {
+    min-height: 100vh; 
+    overflow: hidden;
+    background-color: #1B1E23;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 4rem 0;
+}
+
+.pricing-wrapper {
+    width: 80%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 0rem;
+}
+
+.pricing-plans{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    width: 100%;
+}
+
+.pricing-header h2 {
+    font-size: 3rem;
+    color: #FEFEFE;
+    font-weight: 700;
+    white-space: nowrap;
+}
+
+.pricing-toggle {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    margin-top: 1.5rem;
+    background-color: #232627;
+    border-radius: 20rem;
+}
+
+.toggle-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    padding: 1.2rem 2rem;
+    border: 0rem solid transparent;
+    background-color: transparent;
+    color: #FEFEFE;
+    font-size: 1rem;
+    font-weight: 600;
+    border-radius: 50rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+
+}
+
+
+
+.toggle-button.active {
+    background: linear-gradient(180deg, #6C99F4 0%, #3F6FD1 100%);
+}
+
+
+
+.pricing-container {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    flex-wrap: wrap;
+    margin-top: 2.5rem;
+    width: 100%;
+    max-width: 30rem;
+    padding: 0 1rem;
+
+}
+
+.pricing-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    background-color: #1E2229;
+    border-radius: 1.5rem;
+    padding: 2.5rem;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.pricing-card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+}
+
+.pricing-card h3 {
+    font-size: 1.75rem;
+    color: #FEFEFE;
+}
+
+.pricing-card p {
+    font-size: 0.8rem;
+    color: #6C7275;
+
+}
+
+.pro-line-splitter {
+    width: 100%;
+    height: 0.1rem;
+    background: #FEFEFE;
+    margin: 0rem;
+}
+
+.pro-features-list {
+    list-style: none;
+    padding: 0;
+    margin-right: 25%;
+    margin-bottom: 2rem;
+    margin-top: 4rem;
+}
+
+.pro-features-list li {
+    font-size: 1rem;
+    color: #FEFEFE;
+    margin-bottom: 0.75rem;
+}
+
+.pro-features-list li::before {
+    content: "✔";
+    color: #FEFEFE;
+    margin-right: 0.5rem;
+}
+
+.pro-get-started-button {
+    padding: 0.75rem 40%;
+    background: linear-gradient(180deg, #6C99F4 0%, #3F6FD1 100%);
+    color: #FEFEFE;
+    border: none;
+    border-radius: 50px;
+    font-size: 1rem;
+    font-weight: 600;
+    cursor: pointer;
+    white-space: nowrap;
+}
+
+/* --------- FAQ Section --------- */
+
+#faq-section {
+    min-height: 100vh; 
+    overflow: hidden;
+    background-color: #1B1E23;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 4rem 0;
+}
+  
+.faq-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 3rem;
+    width: 80%;
+}
+
+.faq-header h2 {
+    text-align: center;
+    color: #FEFEFE;
+    margin-top: 4rem;
+    font-size: 3rem;
+    font-weight: bold;
+    padding: 0.5rem;
+}
+
+.faq-content {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    gap: 3rem;
+}
+
+.faq-column {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.faq-card {
+    background-color: #1E2229;
+    filter: drop-shadow(0 0 0.6rem #101214);
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 2.5rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.faq-card-content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 1rem;
+    overflow: hidden;
+    transition: all 0.3s ease;
+}
+
+.faq-card:hover {
+    transform: scale(1.02);
+}
+
+.faq-card hr {
+    width: 100%;
+    height: 0.2rem;
+    background: #FEFEFE;
+    display: none;
+    margin: 1rem 0;
+}
+
+.faq-card.expanded hr {
+    display: block;
+}
+
+.faq-card p {
+    font-size: 1rem;
+    color: #DCE1EC;
+    margin: 0;
+    height: 0;
+    overflow: hidden;
+    opacity: 0;
+    transition: all 0.3s ease;
+}
+
+.faq-card.expanded p {
+    height: auto;
+    opacity: 1;
+    padding: 1rem 0;
+}
+
+.faq-card-title {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    cursor: pointer;
+    gap: 1rem;
+    width: 100%;
+}
+
+.faq-card-title h3 {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin: 0;
+    flex: 1;
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #FEFEFE;
+}
+
+.faq-card-title img {
+    max-width: 1.5rem;
+    height: auto;
+    transition: transform 0.3s ease;
+}
+
+.faq-card.expanded .faq-card-title img {
+    transform: rotate(45deg);
+}
+
+
+/* --------- CTA Section --------- */
+
+#cta-section {
+    overflow: hidden;
+    background-color: #1B1E23;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 4rem 0;
+}
+
+.cta-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    width: 80%;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
+
+.cta-container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+}
+
+.cta-container h2{
+    text-align: center;
+    color: #FEFEFE;
+
+    font-size: 3rem;
+    font-weight: bold;
+    color: #FEFEFE;
+    padding: 0.5rem;
+}
+
+.cta-buttons {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: row;;
+    gap: 1rem;
+}
+
+
+.cta-buttons a {
+    color: #FEFEFE;
+    border-radius: 50px;
+    font-size: 1rem;
+    font-weight: 600;
+    cursor: pointer;
+    white-space: nowrap;
+}
+
+.cta-get-started-button {
+    padding: 0.75rem 2rem;
+    background: linear-gradient(180deg, #6C99F4 0%, #3F6FD1 100%);
+}
+
+.cta-sign-in-button {
+    padding: 0.75rem 2rem;
+    background: #1E2229;
+    border: 2px solid #FEFEFE;
+}
+
+.cta-texture {
+
+    width: 80%;
+    height: 80%;
+
+}
+
+
+
 
 /* Index Part CSS End */
 
 /* ///////////////////////////////////////////////////////////// */
+
+/* Sign Up / Sign In / Fogrgot Password Part CSS Start */
+
+/* --------- Sign Up Section --------- */
+
+#sign-up-section {
+    min-height: 100vh; 
+    overflow: hidden;
+    background-color: #1B1E23;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 4rem 0;
+}
+
+.account-form-wrapper {
+    width: 100%;
+    max-width: 1200px;
+    margin: 3rem 1rem;
+    display: flex; 
+    align-items: stretch; /* Ensure both children stretch to the same height */
+}
+
+.texture-wrapper {
+    flex: 1;
+    width: 50%; /* Equal width */
+    background-color: #1E2229;
+    border-radius: 0px 20px 20px 0px;
+    overflow: hidden; /* Keeps image contained */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: auto; /* Allow height to adjust based on content */
+}
+
+.texture-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensures image maintains aspect ratio */
+}
+
+.account-form-container {
+    flex: 1;
+    width: 50%; /* Equal width */
+    max-width: none; /* Remove max-width constraint */
+    background-color: #1E2229;
+    border-radius: 20px 0px 0px 20px;
+    padding: 2.5rem;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Center content vertically */
+}
+
+.account-form-header {
+    text-align: center;
+    margin-bottom: 4rem;
+}
+
+.account-form-header h1 {
+    color: #FEFEFE;
+    font-size: 3rem;
+    font-weight: 700;
+}
+
+.account-form {
+    padding-left: 15%;
+    padding-right: 15%;
+}
+
+.form-sign-in p {
+    color: #FEFEFE;
+    font-size: 0.9rem;
+    font-weight: 500;
+}
+
+.form-sign-in a {
+    color: #6C99F4;
+    text-decoration: none;
+}
+
+.form-group {
+    margin-bottom: 1.5rem;
+}
+
+.form-group label {
+    display: block;
+    color: #FEFEFE;
+    margin-bottom: 0.5rem;
+    font-size: 0.9rem;
+    font-weight: 500;
+}
+
+.form-group input {
+    width: 100%;
+    padding: 0.75rem;
+    background-color: #1B1E23;
+    border: 1px solid #1B1E23;
+    filter: drop-shadow(0.2rem 0.2rem 0rem #101214);
+    border-radius: 6px;
+    color: #ffffff;
+    font-size: 0.9rem;
+}
+
+.form-group input::placeholder {
+    color: #6c757d;
+    font-weight: 500;
+}
+
+.form-group input:focus {
+    outline: none;
+    border-color: #6C99F4;
+}
+
+.sign-up-button {
+    width: 100%;
+    padding: 0.75rem;
+    background: linear-gradient(180deg, #6C99F4 0%, #3F6FD1 100%);
+    border: none;
+    border-radius: 6px;
+    color: #ffffff;
+    font-size: 1rem;
+    cursor: pointer;
+    margin-top: 0.5rem;
+}
+
+.form-social-media {
+    margin-top: 2rem;
+}
+
+.form-social-media-split {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1.5rem;
+}
+
+.form-social-media-line {
+    flex: 1;
+    height: 1px;
+    background-color: #FEFEFE;
+    border: none;
+}
+
+.form-social-media-split p {
+    color: #9ba1a6;
+    margin: 0 1rem;
+    font-size: 0.9rem;
+}
+
+.social-media-icons {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.social-media-icons a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 40px;
+    background-color: #1B1E23;
+    border-radius: 6px;
+    transition: background-color 0.2s;
+}
+
+.social-media-icons p {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #FEFEFE;
+    margin: 0;
+    font-weight: 500;
+}
+
+.social-media-icons a:hover {
+    background-color: #363b42;
+}
+
+.social-media-icons img {
+    width: auto;
+    height: 60%;
+    margin-right: 1rem;
+}
+
+/* --------- Sign In Section --------- */
+
+#sign-in-section {
+    min-height: 100vh; 
+    overflow: hidden;
+    background-color: #1B1E23;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 4rem 0;
+}
+
+.form-forgot-password a {
+    color: #6C99F4;
+    text-decoration: none;
+    font-size: 0.9rem;
+    font-weight: 500;
+}
+
+/* --------- Forgot Password Section --------- */
+
+#forgot-pass-section {
+    min-height: 100vh; 
+    overflow: hidden;
+    background-color: #1B1E23;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 4rem 0;
+}
+
+
+/* Sign Up / Sign In / Fogrgot Password Part CSS End */
+
+/* ///////////////////////////////////////////////////////////// */
+
+/* Dashboard Part CSS Start */
+
+#dashboard-section {
+    min-height: 100vh; 
+    overflow: hidden;
+    background-color: #1B1E23;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 4rem 0;
+}
+
+.dashboard-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 4rem;
+    width: 100%;
+}
+
+.dashboard-container {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 5rem;
+}
+
+.dashboard-header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.dashboard-header h1 {
+    color: #FEFEFE;
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+.dashboard-header p {
+    color: #8A95AA;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.dashboard-accounts {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.connect-accounts-header h2 {
+    color: #FEFEFE;
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+.connect-accounts-header p {
+    color: #8A95AA;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.dashboard-accounts-line {
+    width: 100%;
+    height: 0.2rem;
+    background: #FEFEFE;
+}
+
+.connect-account {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 100%;
+}
+
+.account-info {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.account-info img {
+    width: 2rem;
+    height: 2rem;
+}
+
+.account-info h3 {
+    color: #FEFEFE;
+    font-weight: 700;
+    font-size: 1.5rem;
+}
+
+.social-media-connect {
+    font-weight: 500;
+    font-size: 1rem;
+    color: white;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+    white-space: nowrap;
+}
+
+.social-media-connect:disabled{
+    background-color: transparent;
+    border: 2px solid #FEFEFE;
+}
+
+.social-media-connect:enabled{
+    background: linear-gradient(180deg, #6C99F4 0%, #3F6FD1 100%);
+}
+
+
+.account-section{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.account-section h2 {
+    color: #FEFEFE;
+}
+
+.profile-details {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 100%;
+}
+
+.detail-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
+}
+
+.detail-row h3 {
+    color: #FEFEFE;
+    font-weight: 700;
+    font-size: 1.5rem;
+}
+
+.detail-row p {
+    font-weight: 500;
+    font-size: 1rem;
+    color: #8A95AA;
+}
+
+.membership-details {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-direction: column;
+}
+
+.membership-details a {
+    color: #6C99F4;
+    text-decoration: none;
+    font-weight: 500;
+}
+
+
+/* Dashboard Part CSS End */
