--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -367,11 +367,23 @@
     padding: 1rem;
   }
 
+  .dashboard-wrapper {
+    padding: 0rem;
+  }
+
   .dashboard-header h1 {
     font-size: 2.5rem;
   }
 
   .social-media-connect {
+    font-size: 0.8rem;
+  }
+
+  .dashboard-container h3 {
+    font-size: 1rem;
+  }
+
+  .dashboard-container p {
     font-size: 0.8rem;
   }
 }
